# dig

./: README.md  edge-status.json  feeds.mjs  install.sh  market-metrics.json  notify.mjs  performance.json  research-report.md  research.mjs  sw.js  track.mjs
budsignal/: README.md  app.js  edge-status.json  engine.js  (+8 more)
hedgedesk/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
hedgedesk/config/: risk_limits.yaml  settings.yaml  universe.yaml
hedgedesk/deploy/: Dockerfile
hedgedesk/deploy/azure/: containerapp.yaml  deploy.sh  main.bicep
hedgedesk/docs/: ARCHITECTURE.md  DEPLOY_AZURE.md  GO_LIVE.md  HERMES_LEARNING.md  LIVE_DATA.md
hedgedesk/hedgedesk/: __init__.py  config.py  main.py  service.py
hedgedesk/hedgedesk/agents/: __init__.py  analysts.py  base.py  committee.py  execution.py
hedgedesk/hedgedesk/data/: __init__.py  gateway.py  indicators.py  openbb_gateway.py
hedgedesk/hedgedesk/data/providers/: __init__.py  base.py  cryptocom.py  openbb.py  synthetic.py  yfinance_provider.py
hedgedesk/hedgedesk/hermes/: __init__.py  audit.py  memory.py  orchestrator.py
hedgedesk/hedgedesk/llm/: __init__.py  client.py  heuristic.py
hedgedesk/hedgedesk/orchestration/: __init__.py  pipeline.py  schemas.py
hedgedesk/hedgedesk/portfolio/: __init__.py  exit_engine.py  valuation.py
hedgedesk/hedgedesk/prompts/: __init__.py  analysts.py  committee.py  execution.py
hedgedesk/scripts/: live_check.py
hedgedesk/tests/: test_heuristic_mode.py  test_live_data.py  test_pipeline_offline.py
hedgedesk/tests/fixtures/: btc_usdt_4h.json
(+10 files in other folders)
